CHANGELOG

== Apr 16, 2012
* Added Flattr
* Removed Facebook
* Added for testing jquery.wysiwyg Editor
* Improved Comment style

== Apr 13, 2012
* Internal Commenting System completed
* Added avatar image to user profile
* Reduced memcached caching to 2 hours
* Moved solr similar items to cached fragment block
* Added Comments to Admin interface

== Apr 10, 2012
* Updated to Rails 3.2.3, fixed security vulnerabilities

== Apr 07, 2012
* Removed twitter Javascript helper
* Changed links from https to http for sharing icons
* Added resque take task back
* Added AddressBook
* country-select gem

== Apr 06, 2012
* Twitter updating is now using a Resque Queue
* jQuery-rails 1.7.2 update
* Back to using Resque

== Apr 01, 2012
* Fixed caching bug if item Images were modified
* Improved Item Cache Key to included last image timestamp
* Improved Item cache key to use human readable timestamps
* Revamped RSS/Atom Feeds
* Added basic Rspec Tests for RSS/Atom feeds
* Updated Feed Titles to match site name
* Improved Attachments Admin interface (/admin/attachments/1234)
* Improved performance of admin interface by adding Include joins sql queries.
* Changed per_page from 40 to 24 for faster loading.
* Upgraded ActiveAdmin to version 4.0.3
* Removed jQuery-ui js and css, custom minimal Modernizr.js
* Improved assets page loading time
* CSS and JS decreased by 80K after gzip, 300K before gzip

== Mar 30, 2012
* Added sticky highlight feature for articles
* Updated Dalli gem to 2.0.1, fater memcached
* Updated other Gems

== Mar 25, 2012
* Fixed Author Link on article page
* Fixed bug on editing user info
* Disabled WaterMarking temporarily

== Mar 17, 2012
* Fixed caching bug on the Category Boxes on main page

== Mar 14, 2012
* Add Unique UID to the images path
* Changed keywords examples to be more appropriate on admin site
* Gems updated
* Testing watermark on images

== Mar 12, 2012
* Popup image bug fix

== Mar 11, 2012