@@ -1,0 +1,3 @@
+class SiteSetting < RailsSettings::Settings
+  
+end
