@@ -1,0 +1,10 @@
+<%= semantic_form_for [:admin, @site_setting]  do |f| %>
+
+  <%= f.inputs :name => "Site Settings" do %>
+    <%= f.input :var %>
+    <%= f.input :value, :input_html => { :value => @site_setting.value } %>
+  <% end %>
+  
+  <%= f.buttons :commit %>
+<% end %>
+
