@@ -12,6 +12,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <%= yield(:head) %>
+    <%= render :partial => "/shared/ga" %>
   </head>
   
   <body>
