@@ -1,5 +1,9 @@
+require 'resque-history'
+
 class TwitterQueue
+  extend Resque::Plugins::History
   @queue = :twitter
+  @max_history = 100
   
   def self.perform(share_id)
     share = Share.find(share_id)
