@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20120413040141) do
+ActiveRecord::Schema.define(:version => 20120417003048) do
 
   create_table "active_admin_comments", :force => true do |t|
     t.integer  "resource_id",   :null => false
@@ -206,6 +206,17 @@ ActiveRecord::Schema.define(:version => 20120413040141) do
 
   add_index "scores", ["scorable_id", "scorable_type"], :name => "index_scores_on_scorable_id_and_scorable_type"
   add_index "scores", ["user_id"], :name => "index_scores_on_user_id"
+
+  create_table "settings", :force => true do |t|
+    t.string   "var",                      :null => false
+    t.text     "value"
+    t.integer  "thing_id"
+    t.string   "thing_type", :limit => 30
+    t.datetime "created_at",               :null => false
+    t.datetime "updated_at",               :null => false
+  end
+
+  add_index "settings", ["thing_type", "thing_id", "var"], :name => "index_settings_on_thing_type_and_thing_id_and_var", :unique => true
 
   create_table "shares", :force => true do |t|
     t.integer  "item_id"
